# rubixcubeproject

./: BFSSOLVER.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSSOLVER.h  Generalrubikscube.cpp  Generalrubikscube.h  IDASTARSOLVER.h  IDDFSSOLVER.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  Rubikscube1d.cpp  Rubikscube3d.cpp  Rubikscubebitboard.cpp  main.cpp  math.cpp  math.h
